--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,8 +2,8 @@
 
 <ul>
   <% @tasks.each do |task| %>
-  <li><%= link_to task.id, task %>:<%= task.content %></li>
-  <%  end %>
+  <li><%= link_to task.id, task %>:<%= task.status %> &gt; <%= task.content %></li>
+  <%end%>
 </ul>
 
 <%= link_to '新規タスク作成', new_task_path %>
