--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,7 @@
 <h1>id:<%= @task.id %>のタスクの詳細ページ</h1>
 
-<p><%= @task.content %></p>
+<p>ステータス: <%= @task.status %></p>
+<p>タスク<%= @task.content %></p>
 
 <%= link_to '一覧に戻る', tasks_path %>
 
